objects/TS_Case_Audit__c.object
<CustomObject><fields>
        <fullName>Case_Owner__c</fullName>
        <formula>Case__r.Owner:User.FirstName + " " + Case__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>the Case the TS Audit is related to</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>TS_Case_Audits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Communications_Rating__c</fullName>
        <inlineHelpText>1 – Weak 
2 – Below Average 
3 – Average 
4 – Strong 
5 – Very Strong</inlineHelpText>
        <label>Communications Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Communications__c</fullName>
        <inlineHelpText>Conveying to the customer we understand their issue. Acknowledging information customer sends. Explaining why we are asking for information. Efficient use of phone, WebEx, email. Professional, legible grammar.</inlineHelpText>
        <label>Communications</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Personal_connection_Empathy_Rating__c</fullName>
        <inlineHelpText>1 – Weak 
2 – Below Average 
3 – Average 
4 – Strong 
5 – Very Strong</inlineHelpText>
        <label>Personal connection / Empathy Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Personal_connection_Empathy__c</fullName>
        <inlineHelpText>Personalizing the answer – focusing on the customer’s experience/situation, not necessarily pointing to the bug only</inlineHelpText>
        <label>Personal connection / Empathy</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Process_Rating__c</fullName>
        <inlineHelpText>1 – Weak 
2 – Below Average 
3 – Average 
4 – Strong 
5 – Very Strong</inlineHelpText>
        <label>Process Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Process__c</fullName>
        <inlineHelpText>Complete case administration. Articles and gecks attached. Attention to proper population of fields.</inlineHelpText>
        <label>Process</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Technical_Accuracy_Rating__c</fullName>
        <inlineHelpText>1 – Weak 
2 – Below Average 
3 – Average 
4 – Strong 
5 – Very Strong</inlineHelpText>
        <label>Technical Accuracy Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Timeliness_Rating__c</fullName>
        <inlineHelpText>1 – Weak 
2 – Below Average 
3 – Average 
4 – Strong 
5 – Very Strong</inlineHelpText>
        <label>Timeliness Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Timeliness__c</fullName>
        <inlineHelpText>Responding promptly to customers after taking ownership and time between communications – keeping the customer in the loop</inlineHelpText>
        <label>Timeliness</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Understanding_the_customer_s_objective__c</fullName>
        <inlineHelpText>Understanding the customer’s objective. Accuracy and preciseness (in relation to customer’s question) of the answer. Solved the customer's original question/problem.</inlineHelpText>
        <label>Technical Accuracy</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>object to keep track of TS audit data</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>TS Case Review</label><nameField>
        <displayFormat>Audit {000000}</displayFormat>
        <label>TS Case Audit Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>TS Case Reviews</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility></CustomObject>